--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@tanstack/query-sync-storage-persister": "^5.90.22",
     "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-persist-client": "^5.90.22",
+    "@tanstack/react-virtual": "^3.13.19",
     "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.2",
     "react-router-dom": "^7.13.0",
-    "react-virtualized-auto-sizer": "^2.0.3",
-    "react-window": "^2.2.7",
     "zod": "^4.3.6"
   },
   "devDependencies": {
